Client: fix css bug where app store was misaligned

--- a/client/Social/Apps/styl/app.appstore.styl
+++ b/client/Social/Apps/styl/app.appstore.styl
@@ -243,6 +243,8 @@ body.apps
   .content-page.appstore
     max-width                 1036px
     min-height                500px
+    padding-left              10px
+    box-sizing                border-box
 
     .singleapp
       padding-top                0
